--- a/index.html
+++ b/index.html
@@ -6,9 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="/assets/css/style.css">
-    <title>Document</title>
+    <title>Whack a Piggy!</title>
 </head>
 <body>
+    <h1 id="title"> Whack a Piggy!</h1>
+    <h2>Score</h2>
+    <h3 id="score">0</h3>
+
+    <h2>Time Remaining</h2>
+    <h3>90</h3>
+
+    <div class="table">
+        <div class="circle" id="1"></div>
+        <div class="circle" id="2"></div>
+        <div class="circle" id="3"></div>
+        <div class="circle" id="4"></div>
+        <div class="circle" id="5"></div>
+        <div class="circle" id="6"></div>
+        <div class="circle" id="7"></div>
+        <div class="circle" id="8"></div>
+        <div class="circle" id="9"></div>
+        <div class="circle" id="10"></div>
+        <div class="circle" id="11"></div>
+        <div class="circle" id="12"></div>
+
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
