styling adjust for table class

--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Google Fonts link-->
+    <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="/assets/css/style.css">
     <title>Whack a Piggy!</title>
 </head>
 <body>
     <h1 id="title"> Whack a Piggy!</h1>
-    <h2>Score</h2>
-    <h3 id="score">0</h3>
+    <h2 class="score">Score</h2>
+    <h3 class="score">0</h3>
 
-    <h2>Time Remaining</h2>
-    <h3>90</h3>
+    <h2 class="time">Time Remaining</h2>
+    <h3 class="time">90</h3>
 
     <div class="table">
         <div class="circle" id="1"></div>
@@ -26,9 +28,6 @@
         <div class="circle" id="7"></div>
         <div class="circle" id="8"></div>
         <div class="circle" id="9"></div>
-        <div class="circle" id="10"></div>
-        <div class="circle" id="11"></div>
-        <div class="circle" id="12"></div>
 
     </div>
     <script src="assets/js/script.js"></script>
