Add functions to move to random circles and the timer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1 id="title"> Whack a Piggy!</h1>
-    <section>
+    <section class="game-details">
         <div id="score">
          <h2 class=>Your Score:</h2>
          <h3>0</h3>
