--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Whack a piggy, pig game made with JavaScript">
+    <meta name="keywords" content="CSS, HTML, JavaScript, timed game, whack a piggy game">
 
     <link rel="stylesheet" href="/assets/css/style.css">
     <title>Whack a Piggy!</title>
