add count down function

--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
     <h1 id="title"> Whack a Piggy!</h1>
     <section class="game-details">
         <div id="score">
-         <h2 class=>Your Score:</h2>
-         <h3>0</h3>
+         <h2 class=>Your Score:
+             <span>0</span>
+         </h2>
+         
          </div>
 
-        <div id="time"> 
-         <h2>Time Remaining:</h2>
-         <h3>90</h3>
+        <div> 
+         <h2>Time Remaining:
+             <span id="time">90</span>
+         </h2>
+         
          </div>
      </section>
 
