add incrementScore function but am having issues getting it to work

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 id="title"> Whack a Piggy!</h1>
     <section class="game-details">
         <div id="score">
-         <h2 class=>Your Score:
+         <h2>Your Score:
              <span>0</span>
          </h2>
          
