--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <h1 id="title"> Whack a Piggy!</h1>
     <section class="game-details">
-        <div id="score">
+        <div>
          <h2>Your Score:
-             <span>0</span>
+             <span id="score">0</span>
          </h2>
          
          </div>
