styles added to end game container contents

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
      
     </section>
      <section class="end-game-container hide">
-        <h1>Game Over!</h1>
+        <h1 id="end-game">Game Over!</h1>
         <h2 id="final-score">Your final Score is </h2>
+        <button  id="restart-btn" onclick="startGame()">Restart Game!</button>
 
     </section>
 
