bug issue with incrementing score when the game is restarted issue now fixed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      <section class="end-game-container hide">
         <h1 id="end-game">Game Over!</h1>
         <h2 id="final-score">Your final Score is </h2>
-        <button  id="restart-btn" onclick="startGame()">Restart Game!</button>
+        <button  id="restart-btn" onclick="restartGame()">Restart Game!</button>
 
     </section>
 
