--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Whack a piggy, pig game made with JavaScript">
     <meta name="keywords" content="CSS, HTML, JavaScript, timed game, whack a piggy game">
 
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Whack a Piggy!</title>
 </head>
 <body>
