final score now showing on end game container

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
      <section class="end-game-container hide">
         <h1 id="end-game">Game Over!</h1>
-        <h2 id="total">Your final Score is </h2>
+        <h2 id="total">Your final Score is <span class="conclusion">0!</span></h2>
         <button  id="restart-btn" onclick="restartGame()">Restart Game!</button>
 
     </section>
