--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    
+
+
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Whack a Piggy!</title>
 </head>
@@ -23,7 +26,7 @@
     <section class="start-game-container show">
     <div>
         <h1 id="title">Whack A Piggy!</h1>
-            <p>Welcome to Whack A Piggy, hit as many piggys before the time runs out.</p>
+            <p>Welcome to Whack A Piggy, hit as many piggys as you can before the time runs out.</p>
             <button  id="start-btn" onclick="startGame()">Start Game</button>
         
     </div>
